[tool] Include key in rendered diagrams
Fixes #100

--- a/tool/renderer/package.json
+++ b/tool/renderer/package.json
@@ -7,7 +7,8 @@
   "main": "render.js",
   "dependencies": {
     "data-uri-to-buffer": "2.0.0",
-    "puppeteer-core": "1.8.0"
+    "puppeteer-core": "1.8.0",
+    "jimp": "0.6.0"
   },
   "pkg": {
     "assets": "page-functions.js"
