*WIP* [tool] Speed up CI test runs with new eftest config
This uses a prerelease version of eftest that allows for setting the
number of threads to be used when testing, which works around a problem
introduced by eftest’s default behavior and a bug in CircleCI.

This is described in detail here: https://github.com/weavejester/eftest/pull/63

Because this tool uses mainly CPU-intensive property tests, increasing
the number of cores available for testing, and then ensuring that we
use a threadpool of the same size, should help the test suite run faster
in terms of clock time, by reducing context switching.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ tool_job_defaults: &tool_job_defaults
 jobs:
    tool_test:
      <<: *tool_job_defaults
+     resource_class: xlarge # Must correspond to value of :thread-count in runner.clj; see note there.
      steps:
        - checkout: {path: ~/project}
        - restore_cache:
